placeholder page has been modified
there is a "hackpadTest" in the tests folder. Take it as you will.

--- a/server/config.json
+++ b/server/config.json
@@ -2,5 +2,6 @@
     "syncServerLoc" : "nodeServer/",
     "fileServerLoc" : "webServer/",
     "webClientLoc"  : "webClient/",
-    "databaseFile"  : "database/db.sqlite"
+    "databaseFile"  : "database/db.sqlite",
+    "database"  : "database/"
 }
